# walletdoctor

./: .gitignore  .mailmap  AGG_SUMMARY_DEPLOYMENT.md  ANALYTICS_EXECUTIVE_SUMMARY.md  ANALYTICS_TECHNICAL_DESIGN.md  BOT_MANAGEMENT.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLEANUP_REPORT.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  EXECUTION-SUMMARY.md  GPT_SYSTEM_PROMPT_SPEC.md  HANDOFF_CURRENT_STATE.md  HANDOFF_NOTES.md  HELIUS_PAID_PLAN_UPDATE.md  LICENSE  MICRO-EXPERIMENT-1.md  MILESTONE_P4_SUMMARY.md  MILESTONE_P5_COMPLETE.md  MILESTONE_P5_COMPLETE_FINAL.md  MILESTONE_P5_SUMMARY.md  MILESTONE_P6_COMPLETE.md  MILESTONE_P6_SPEC.md  P6_PROGRESS_SUMMARY.md  PAGINATION_UPDATE.md  POS-001-POSITION-BUILDER-DEBUG.md  PROJECT_RETROSPECTIVE.md  PROJECT_STRUCTURE.md  Procfile  Procfile.sync  QUICKSTART.md  QUICK_START_MVP.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  SECURITY_UPDATE.md  TESTING_GUIDE.md  TESTING_IMPROVEMENTS_SUMMARY.md  (+174 more)
.cursor/: Instructions.md  scratchpad.md
archive/: RAILWAY_DEPLOYMENT.md
docs/: ARCHITECTURE.md  BETA_VALIDATION_STATUS.md  BOOTSTRAP_ALGORITHM_EXAMPLE.py  CLEANUP_SUMMARY.md  DAILY_STATUS_2025-07-02.md  DEPLOY_TO_RAILWAY.md  EXECUTION_PLAN_UPDATE.md  GPT_INTEGRATION_FINAL_PLAN.md  MARKETCAP_CACHE.md  MARKET_CAP_API_DOCUMENTATION.md  MVP_ROADMAP.md  NATURAL_UX_DESIGN.md  POCKET_COACH_STATUS.md  PRODUCTION_DEPLOYMENT.md  PROMPT_ID_IMPLEMENTATION_NOTES.md  REAL_TALK_IMPROVEMENT.md  SSE_API_DOCUMENTATION.md  SSE_CLIENT_QUICKSTART.md  SSE_STREAMING_GUIDE.md  TELEGRAM_BOT_FIX_SUMMARY.md  V3_TEST_RESULTS.md  (+7 more)
(+617 files in other folders)
